# metaflux-client-typescript

./: .npmignore  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.test.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
__tests__/: actions.test.ts  faucet.test.ts  info.test.ts  native.test.ts  scale.test.ts  sign.test.ts  typed.test.ts  typed_orders.test.ts  typed_w1.test.ts  ws.test.ts
src/: client.ts  faucet.ts  http.ts  index.ts  info-types.ts  info.ts  native.ts  types.ts  wasm.ts  ws.ts
src/native/: actions.ts  digest.ts  index.ts  scale.ts  typed.ts  typed_orders.ts
src/rest/: http.ts  info.ts
src/types/: account.ts  cross-chain.ts  encrypted.ts  fba.ts  governance.ts  index.ts  meta-bridge.ts  pm.ts  rfq.ts  spot.ts  staking.ts  trading.ts  twap.ts  typed.ts  vault.ts
src/types/info/: core.ts  hl-parity.ts  index.ts  reads.ts
src/wallet/: wasm.ts
src/ws/: ws.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
